syntax = "proto3";

package main;

option go_package = "./proto";

// 添加限时购表
message AddFlashPromotionReq {
  string end_date = 1; //结束日期
  string start_date = 2; //开始日期
  int32 status = 3; //上下线状态
  string title = 4; //标题

}

message AddFlashPromotionResp {
  string pong = 1;
}

// 删除限时购表
message DeleteFlashPromotionReq {
  repeated int64 ids = 1;
}

message DeleteFlashPromotionResp {
  string pong = 1;
}

// 更新限时购表
message UpdateFlashPromotionReq {
  string title = 1; //标题
  string end_date = 2; //结束日期
  int64 id = 3; //编号
  string start_date = 4; //开始日期
  int32 status = 5; //上下线状态


}

message UpdateFlashPromotionResp {
  string pong = 1;
}

// 更新限时购表状态
message UpdateFlashPromotionStatusReq {
  repeated int64 Ids = 1; //编号
  int32 Status = 2; //上下线状态
}

message UpdateFlashPromotionStatusResp {
  string pong = 1;
}

// 查询限时购表详情
message QueryFlashPromotionDetailReq {
    int64 id = 1;
}

message QueryFlashPromotionDetailResp {
  string create_time = 1; //创建时间
  string end_date = 2; //结束日期
  int64 id = 3; //编号
  string start_date = 4; //开始日期
  int32 status = 5; //上下线状态
  string title = 6; //标题

}

// 分页查询限时购表列表
message QueryFlashPromotionListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  string end_date = 3; //结束日期
  string start_date = 4; //开始日期
  int32 status = 5; //上下线状态
  string title = 6; //标题

}

message FlashPromotionListData {
  string create_time = 1; //创建时间
  string end_date = 2; //结束日期
  int64 id = 3; //编号
  string start_date = 4; //开始日期
  int32 status = 5; //上下线状态
  string title = 6; //标题

}

message QueryFlashPromotionListResp {
  int64 total = 1;
  repeated  FlashPromotionListData list = 2;
}

message QueryFlashPromotionListByDateReq {
  string currentDate = 1;
}

message QueryFlashPromotionListByDateResp {
  repeated  FlashPromotionListData list = 1;
}
// 限时购表
service FlashPromotionService {
  // 添加限时购表
  rpc AddFlashPromotion(AddFlashPromotionReq) returns (AddFlashPromotionResp){}
  // 删除限时购表
  rpc DeleteFlashPromotion(DeleteFlashPromotionReq) returns (DeleteFlashPromotionResp){}
  // 更新限时购表
  rpc UpdateFlashPromotion(UpdateFlashPromotionReq) returns (UpdateFlashPromotionResp ){}
  // 更新限时购表状态
  rpc UpdateFlashPromotionStatus(UpdateFlashPromotionStatusReq) returns (UpdateFlashPromotionStatusResp ){}
  // 查询限时购表详情
   rpc QueryFlashPromotionDetail(QueryFlashPromotionDetailReq) returns (QueryFlashPromotionDetailResp){}
  // 查询限时购表列表
  rpc QueryFlashPromotionList(QueryFlashPromotionListReq) returns (QueryFlashPromotionListResp){}

  //查询当前时间是否有秒杀活动
  rpc QueryFlashPromotionListByDate(QueryFlashPromotionListByDateReq) returns(QueryFlashPromotionListByDateResp);


}
