syntax = "proto3";

package main;

option go_package = "./proto";

// 添加限时购通知记录
message AddFlashPromotionLogReq {
  string subscribe_time = 1; //会员订阅时间
  int64 member_id = 2; //会员id
  string member_phone = 3; //会员电话
  int64 product_id = 4; //商品id
  string product_name = 5; //商品名称
  string send_time = 6; //发送时间


}

message AddFlashPromotionLogResp {
  string pong = 1;
}

// 删除限时购通知记录
message DeleteFlashPromotionLogReq {
  repeated int64 ids = 1;
}

message DeleteFlashPromotionLogResp {
  string pong = 1;
}


// 查询限时购通知记录详情
message QueryFlashPromotionLogDetailReq {
    int64 id = 1;
}

message QueryFlashPromotionLogDetailResp {
  int64 id = 1; //编号
  int64 member_id = 2; //会员id
  string member_phone = 3; //会员电话
  int64 product_id = 4; //商品id
  string product_name = 5; //商品名称
  string send_time = 6; //发送时间
  string subscribe_time = 7; //会员订阅时间

}

// 分页查询限时购通知记录列表
message QueryFlashPromotionLogListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  string member_phone = 3; //会员电话
  string product_name = 4; //商品名称

}

message FlashPromotionLogListData {
  int64 id = 1; //编号
  int64 member_id = 2; //会员id
  string member_phone = 3; //会员电话
  int64 product_id = 4; //商品id
  string product_name = 5; //商品名称
  string send_time = 6; //发送时间
  string subscribe_time = 7; //会员订阅时间

}

message QueryFlashPromotionLogListResp {
  int64 total = 1;
  repeated  FlashPromotionLogListData list = 2;
}

// 限时购通知记录
service FlashPromotionLogService {
  // 添加限时购通知记录
  rpc AddFlashPromotionLog(AddFlashPromotionLogReq) returns (AddFlashPromotionLogResp){}
  // 删除限时购通知记录
  rpc DeleteFlashPromotionLog(DeleteFlashPromotionLogReq) returns (DeleteFlashPromotionLogResp){}
  // 查询限时购通知记录详情
   rpc QueryFlashPromotionLogDetail(QueryFlashPromotionLogDetailReq) returns (QueryFlashPromotionLogDetailResp){}
  // 查询限时购通知记录列表
  rpc QueryFlashPromotionLogList(QueryFlashPromotionLogListReq) returns (QueryFlashPromotionLogListResp){}


}
