syntax = "proto3";

package main;

option go_package = "./proto";

// 添加人气推荐商品表
message AddHomeRecommendProductReq {
  repeated HomeRecommendProductAddData RecommendProductAddData = 1; //

}
message HomeRecommendProductAddData {
  int64 ProductId = 1; //商品id
  string ProductName = 2; //商品名称
  int32 RecommendStatus = 3; //推荐状态：0->不推荐;1->推荐
  int32 Sort = 4; //排序

}
message AddHomeRecommendProductResp {
  string pong = 1;
}

// 删除人气推荐商品表
message DeleteHomeRecommendProductReq {
  repeated int64 ids = 1;
}

message DeleteHomeRecommendProductResp {
  string pong = 1;
}

// 更新人气推荐商品表
message UpdateRecommendProductSortReq {
  int64 Id = 1; //
  int32 Sort = 2; //排序

}

message UpdateRecommendProductSortResp {
  string pong = 1;
}

// 更新人气推荐商品表状态
message UpdateHomeRecommendProductStatusReq {
  repeated int64 Ids = 1; //
  int32 RecommendStatus = 2; //推荐状态：0->不推荐;1->推荐

}

message UpdateHomeRecommendProductStatusResp {
  string pong = 1;
}

// 查询人气推荐商品表详情
message QueryHomeRecommendProductDetailReq {
    int64 id = 1;
}

message QueryHomeRecommendProductDetailResp {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  string product_name = 3; //商品名称
  int32 recommend_status = 4; //推荐状态：0->不推荐;1->推荐
  int32 sort = 5; //排序

}

// 分页查询人气推荐商品表列表
message QueryHomeRecommendProductListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  string product_name = 3; //商品名称
  int32 recommend_status = 4; //推荐状态：0->不推荐;1->推荐

}

message HomeRecommendProductListData {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  string product_name = 3; //商品名称
  int32 recommend_status = 4; //推荐状态：0->不推荐;1->推荐
  int32 sort = 5; //排序

}

message QueryHomeRecommendProductListResp {
  int64 total = 1;
  repeated  HomeRecommendProductListData list = 2;
}

// 人气推荐商品表
service HomeRecommendProductService {
  // 添加人气推荐商品表
  rpc AddHomeRecommendProduct(AddHomeRecommendProductReq) returns (AddHomeRecommendProductResp){}
  // 删除人气推荐商品表
  rpc DeleteHomeRecommendProduct(DeleteHomeRecommendProductReq) returns (DeleteHomeRecommendProductResp){}
  //修改推荐排序
  rpc UpdateRecommendProductSort(UpdateRecommendProductSortReq) returns(UpdateRecommendProductSortResp);
  // 更新人气推荐商品表状态
  rpc UpdateHomeRecommendProductStatus(UpdateHomeRecommendProductStatusReq) returns (UpdateHomeRecommendProductStatusResp ){}
  // 查询人气推荐商品表详情
   rpc QueryHomeRecommendProductDetail(QueryHomeRecommendProductDetailReq) returns (QueryHomeRecommendProductDetailResp){}
  // 查询人气推荐商品表列表
  rpc QueryHomeRecommendProductList(QueryHomeRecommendProductListReq) returns (QueryHomeRecommendProductListResp){}


}
